# xlang

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  makefile
data/: test0.x
dependencies/: CMakeLists.txt  FindDeps.cmake
scripts/: generate_ast_types.py  strip_preprocessed.py
src/: CMakeLists.txt  ast.h  common.h  debug.h  io.h  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h
tests/: CMakeLists.txt  lexer_tests.cpp  test_main.cpp
